# mercatura-internship

./: package-lock.json
ICP/: package-lock.json
ICP-Journey/2.3/dependencies/: Cargo.toml  README.md  dfx.json
ICP-Journey/2.4/candid_example/: Cargo.toml  README.md  dfx.json
ICP-Journey/2.5/e2e_tests/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICP-Journey/3.2/https_get/: package-lock.json
ICP-Journey/3.2/https_send/: Cargo.toml  (+2 more)
ICP-Journey/3.4/: package-lock.json  package.json
ICP-Journey/5.3/exchange_rust/src/exchange_rust_backend/: Cargo.toml  exchange_rust_backend.did
ICP-Journey/5.3/exchange_rust/src/exchange_rust_backend/src/: dip20.rs  lib.rs
ICP-Journey/hello_world/: canister_ids.json  did.sh
car_project/car_project/: Cargo.toml
projects/: readme.md
projects/basic-auth-app/: Cargo.toml
projects/car_project/: Cargo.toml
projects/csv-app/: Cargo.toml  customer.csv
projects/file-compression-app/: Cargo.toml
projects/image-downloader-app/: Cargo.toml
projects/json-app/: Cargo.toml
projects/link-extractor-app/: Cargo.toml
projects/mongodb-app/: Cargo.toml
projects/notes/: Cargo.toml  notes.txt
projects/pastebin-app/: Cargo.toml
projects/posgres-app/: Cargo.toml
projects/sqlite/: Cargo.toml  sqlite.db
projects/todo-app/: Cargo.toml
rust-sandbox/notes/: rust-crash-course-vandad.md
rust-sandbox/src/: collections.rs  errors.rs  exercise.rs  main.rs  optionals.rs  print.rs  traits.rs
test-tasks/final-project/: Cargo.toml  README.md  inventory.db
test-tasks/task2/: Cargo.toml  calculations.db
(+96 files in other folders)
