[package]
name = "exchange_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.16"
ic-ledger-types = "0.1.0"
ic-types = "0.2.1"
num-bigint = "0.4"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
icrc-ledger-types = "0.1.5"
